# autonomous-pokerogue

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  siglip.py  start.sh
assets/gamestates/ocr/: battle_double_res.json  battle_single_res.json  party_low_res.json  party_res.json  pc_res.json  summary_res.json
configs/: claude.yaml  gpt5.yaml  local.yaml  openrouter.yaml  prompt_extended.yaml  prompt_simple.yaml
output/: general_ocr_002_res.json
src/: gamestates.py  main.py  ocr.py  tools.py
src/autonomous_pokerogue/: cli.py
tests/: test_utils.py
